# llm-release-governor

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-test.yml  publish.yml  release-governor.yml
demo/: run_demo.ps1  run_demo.py  run_demo.sh
demo/fixtures/: locc_bad.json  locc_good.json  override_demo.json
demo/prompts/: bad_prompt.txt  good_prompt.txt
docs/: architecture.md  demo.md  pr_walkthrough.md
examples/: locc_result.json  override.json
examples/.github/workflows/: release-governor.yml
overrides/staging/: staging-deadbeef-1778117684.json
prompt_failure_analyzer/: __main__.py  cli.py
prompt_failure_analyzer/engine/: loader.py  mapping.py  reporter.py
prompt_failure_analyzer/engine/analyzers/: __init__.py  constraint_risk.py  pii_risk.py  schema_risk.py
release_governor/: __main__.py  cli.py
release_governor/engine/: audit.py  decision.py  leakage.py  loader.py  override.py  override_manager.py
release_governor/reporters/: github_reporter.py  json_reporter.py  markdown_reporter.py
tests/: test_audit.py  test_ci.py  test_decision.py  test_e2e.py  test_github_reporter.py  test_leakage.py  test_loader.py  test_override.py  test_override_manager.py
tests/fixtures/ci/: clean_artifact.json
tests/fixtures/ci/bad_override_bundle/: override.json
tests/fixtures/ci/valid_override_bundle/: locc_artifact.json  override.json
tests/fixtures/locc_artifacts/: fail.json  hold.json  pass_with_pii.json  pass_with_schema_drift.json
tests/fixtures/overrides/: legacy_single_type.json  multi_leakage_full.json  multi_leakage_partial.json  rotated_sha.json  valid_staging.json  wildcard_sha.json  wrong_leakage_type.json  wrong_scope.json  wrong_sha.json
tests/fixtures/prompts/: clean.txt  constraint_risk.yaml  mixed_risk.txt  pii_risk.json  schema_risk.txt
tests/pfa/: conftest.py  test_constraint_risk.py  test_e2e.py  test_loader.py  test_mapping.py  test_pii_risk.py  test_reporter.py  test_schema_risk.py
