[project]
name = "llm-release-governor"
version = "0.1.0"
description = "Promotion gate for LLM deployments. Blocks unsafe CI to staging promotion."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["llm", "deployment", "governance", "ci-cd", "staging", "contracts"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["click", "requests", "pydantic>=2.0"]

[project.urls]
Homepage = "https://github.com/<org>/release-governor"
Documentation = "https://github.com/<org>/release-governor#readme"
Issues = "https://github.com/<org>/release-governor/issues"

[project.scripts]
release-governor = "release_governor.cli:cli"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
directory = "dist"

[tool.hatch.build.targets.wheel]
packages = ["release_governor"]

[tool.hatch.build.targets.sdist]
include = ["release_governor/", "tests/", "examples/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tmp_pytest", "tmp_*", ".git", "__pycache__"]
